--- a/.github/workflows/buildStorybook.yml
+++ b/.github/workflows/buildStorybook.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [14.x]
 
     steps:
     - uses: actions/checkout@v1
@@ -26,11 +26,11 @@ jobs:
         npm run build:storybook
     - name: Commit changes and push
       run: |
-        git config --local user.email "fusion@equinor.com"
-        git config --local user.name "GitHub Action by Fusion Team"
+        git config --global user.name "${{ github.actor }}"
+        git config --global user.email "${{ github.actor }}@users.noreply.github.com"
         git add -A
         git commit -m "Build storybook" || true
-        git push "https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git" HEAD:master
+        git push
       env:
         CI: true
         GITHUB_TOKEN: ${{secrets.GITHUB_PERSONAL_TOKEN}}
