--- a/package.json
+++ b/package.json
@@ -168,6 +168,7 @@
         "prosemirror-schema-list": "^1.1.4",
         "prosemirror-state": "^1.3.4",
         "prosemirror-view": "^1.17.5",
+        "react-textarea-autosize": "^8.3.0",
         "rxjs": "^7.0.0"
     }
 }
