--- a/package.json
+++ b/package.json
@@ -170,5 +170,8 @@
         "prosemirror-view": "^1.17.5",
         "react-textarea-autosize": "^8.3.0",
         "rxjs": "^7.0.0"
+    },
+    "optionalDependencies": {
+        "fsevents": "^2.3.2"
     }
 }
