--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
         "@types/storybook__react": "^5.2.1",
         "@types/tinycolor2": "^1.4.2",
         "@types/uuid": "^8.3.0",
-        "adaptivecards": "^2.7.0",
+        "adaptivecards": "^2.11.2",
         "babel-core": "^6.26.3",
         "babel-eslint": "^10.1.0",
         "babel-loader": "^8.2.2",
@@ -169,7 +169,8 @@
         "prosemirror-state": "^1.3.4",
         "prosemirror-view": "^1.17.5",
         "react-textarea-autosize": "^8.3.0",
-        "rxjs": "^7.0.0"
+        "rxjs": "^7.0.0",
+        "swiper": "^9.1.1"
     },
     "optionalDependencies": {
         "fsevents": "^2.3.2"
