--- a/.github/workflows/pre-publish.yml
+++ b/.github/workflows/pre-publish.yml
@@ -1,10 +1,10 @@
 name: Pre-release
 
-on: 
+on:
   workflow_dispatch:
     inputs:
       tag:
-        description: 'Realse tag (PR)'     
+        description: 'Realse tag (PR)'
         required: true
 
 jobs:
@@ -13,8 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [12.x]
-        
+        node-version: [16.x]
+
     steps:
 
       - name: Checkout project
@@ -26,13 +26,13 @@ jobs:
         uses: actions/setup-node@v2
         with:
           registry-url: https://registry.npmjs.org
-          
-      - name: npm install 
+
+      - name: npm install
         run: |
-          npm ci
+          npm ci --legacy-peer-deps
 
       - name: Build
-        run: | 
+        run: |
           npm run build
 
       - name: Config git user
@@ -54,4 +54,3 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
-      
