--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
         "thread-loader": "^3.0.1",
         "ts-loader": "^8.0.16",
         "typesafe-actions": "^5.1.0",
-        "typescript": "^4.1.3",
+        "typescript": "^4.8.3",
         "url-loader": "^4.1.1",
         "uuid": "^8.3.2",
         "webpack": "^5.21.2",
@@ -138,6 +138,9 @@
     ],
     "dependencies": {
         "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.13",
+        "@equinor/fusion-framework-module-app": "^5.2.1",
+        "@equinor/fusion-framework-react": "^5.2.2",
+        "@equinor/fusion-observable": "^8.0.2",
         "@equinor/fusion-react-checkbox": "^0.4.0",
         "@equinor/fusion-react-divider": "^0.2.8",
         "@equinor/fusion-react-icon": "^0.2.6",
