--- a/package.json
+++ b/package.json
@@ -161,7 +161,8 @@
         "prosemirror-state": "^1.3.4",
         "prosemirror-view": "^1.17.5",
         "react-textarea-autosize": "^8.3.0",
-        "rxjs": "^7.0.0"
+        "rxjs": "^7.0.0",
+        "swiper": "^11.0.3"
     },
     "optionalDependencies": {
         "fsevents": "^2.3.2"
