--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,23 @@
 {
-  "extends": "@equinor/eslint-config-fusion"
+  "extends": "@equinor/eslint-config-fusion-react",
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/no-unused-vars": "warn",
+    "@typescript-eslint/no-unnecessary-type-constraint": "warn",
+    "@typescript-eslint/ban-types": "warn",
+    "@typescript-eslint/no-empty-function": "warn",
+    "react-hooks/rules-of-hooks": "warn",
+    "react/prop-types": "warn",
+    "react/display-name": "warn",
+    "react/no-children-prop": "warn",
+    "react/no-unescaped-entities": "warn",
+    "jsx-a11y/click-events-have-key-events": "warn",
+    "jsx-a11y/no-static-element-interactions": "warn",
+    "jsx-a11y/no-noninteractive-element-interactions": "warn",
+    "jsx-a11y/anchor-is-valid": "warn",
+    "jsx-a11y/label-has-associated-control": "warn",
+    "no-empty": "warn",
+    "no-undef": "warn",
+    "no-unsafe-optional-chaining": "warn"
+  }
 }
